--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "kv_store.h": "c",
         "string.h": "c",
-        "kv_error.h": "c"
+        "kv_error.h": "c",
+        "libs.h": "c"
     }
 }
